After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708237 - Problems with GST_RTSP_ADDRESS_POOL_ANY_IPV4
Problems with GST_RTSP_ADDRESS_POOL_ANY_IPV4
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other Linux
: Normal normal
: 1.2.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-09-17 13:23 UTC by Patrick Radizi
Modified: 2014-02-25 22:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Unit test patch wich shows the problems. (1.36 KB, patch)
2013-09-17 13:23 UTC, Patrick Radizi
committed Details | Review

Description Patrick Radizi 2013-09-17 13:23:38 UTC
Created attachment 255103 [details] [review]
Unit test patch wich shows the problems.

Using GST_RTSP_ADDRESS_POOL_ANY_IPV4 when reserving unicast addresses causes some problems:

1) It is not possible to reserve anything if max address is set to ANY
2) Using ANY as min address makes it possible to reserve the same address twice

I have added a patch for the unit tests that shows the errors.
Comment 1 Wim Taymans 2013-11-12 15:56:02 UTC
1) that's expected, the range would be from 0.0.0.0 to 0.0.0.0 so you can only allocate something 0.0.0.0
2) should be fixed with this:

commit b2bc84cdbf7d08c5cb94da435637bc1c7188c918
Author: Wim Taymans <wim.taymans@gmail.com>
Date:   Tue Nov 12 16:52:35 2013 +0100

    address-pool: fix address increment
    
    Use a guint instead of guint8 to increment the address. It's still not
    completely correct because a guint might not be able to hold the complete
    address range, but that's an enhacement for later.
    Add unit test to test improved behaviour.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=708237